samples/_failures_safe/1761300628_7b99c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caf9f935.c: In function ‘display_summary’:
./samples/SAFE/__tmp_caf9f935.c:138:12: error: missing terminating " character
  138 |     printf("Errors: %d
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_caf9f935.c:138:5: error: expected expression at end of input
  138 |     printf("Errors: %d
      |     ^~~~~~
./samples/SAFE/__tmp_caf9f935.c:138:5: error: expected declaration or statement at end of input
